W-14210561: Fix embedded tests when using the modularized container