@@ -14,6 +14,7 @@
 
     <properties>
         <surefire.args>
+            --add-exports=org.mule.distribution.embedded.test/org.mule.runtime.module.embedded=junit
             --add-opens=java.base/java.lang=org.mule.runtime.jpms.utils
             ${surefire.test.unit.open.args}
         </surefire.args>
@@ -118,6 +119,7 @@
         <dependency>
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
+            <scope>test</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.httpcomponents</groupId>
